deploy/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tooljet-service
spec:
  selector:
    component: tooljet
  ports:
    - port: 3000
